Реализация основного сервиса